<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white_smoke"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/profile_failed_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="6dp"
                    android:background="@mipmap/actbar_home_blue_normal" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="55dp"
                    android:gravity="center"
                    android:text="@string/user_profile"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/edit_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="14dp"
                    android:gravity="center"
                    android:text="编辑"
                    android:textColor="@color/tab_menu_pic_color_blue"
                    android:textSize="18sp" />

            </RelativeLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="13dp"
            android:paddingTop="13dp">

            <com.netease.nim.uikit.common.ui.imageview.HeadImageView
                android:id="@+id/user_head_image"
                android:layout_width="@dimen/avatar_size_in_profile"
                android:layout_height="@dimen/avatar_size_in_profile"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/user_head_image"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/nick_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <ImageView
                        android:id="@+id/gender_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:background="@mipmap/nim_male" />
                </LinearLayout>

                <TextView
                    android:id="@+id/user_account"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/color_black_ff666666"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/user_nick"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/color_black_ff666666"
                    android:textSize="15sp"
                    android:visibility="gone" />
            </LinearLayout>


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@+id/attribute"
            android:background="@color/color_split_line_d9d9d9" />

        <include
            android:id="@+id/alias"
            layout="@layout/user_profile_item"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"></View>

        <include
            android:id="@+id/birthday"
            layout="@layout/user_profile_item" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"></View>

        <include
            android:id="@+id/phone"
            layout="@layout/user_profile_item" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"></View>

        <include
            android:id="@+id/email"
            layout="@layout/user_profile_item" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"></View>

        <include
            android:id="@+id/signature"
            layout="@layout/user_profile_item" />


        <LinearLayout
            android:id="@+id/toggle_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/operate_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/begin_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/nim_team_create_btn_selector"
                android:minHeight="50dp"
                android:text="@string/begin_chat"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_17"
                android:visibility="gone" />

            <Button
                android:id="@+id/remove_buddy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/nim_white_round_button_selector"
                android:minHeight="50dp"
                android:text="@string/remove_friend"
                android:textColor="@color/color_red_f04c62"
                android:textSize="@dimen/text_size_17"
                android:visibility="gone" />

            <Button
                android:id="@+id/add_buddy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/nim_team_create_btn_selector"
                android:minHeight="50dp"
                android:text="@string/add_friend"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_17"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>